# The-Machine-Learning-Supplement-GWU-LAiSER-Sample-Simulation-

./: .gitignore
ML-Data-Pipeline-Security-Research/: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
ML-Data-Pipeline-Security-Research/src/ml_pipeline_security/: __init__.py  agent_guardrails.py  data_generation.py  modeling.py
ML-Data-Pipeline-Security-Research/tests/: test_controls.py
scripts/: run_research_demo.py
src/ml_pipeline_security/: experiments.py  modeling.py  security_controls.py
