[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-data-pipeline-security-research"
version = "0.1.0"
description = "Sanitized empirical ML security research sample project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
